Fix: Forçar reload do JS removendo cache
- Adicionar versão no script login-netlify.js
- Desabilitar cache para arquivos JS
- Resolver problema de cache do navegador

--- a/netlify/index.html
+++ b/netlify/index.html
@@ -211,6 +211,6 @@
         </div>
     </div>
 
-    <script src="js/login-netlify.js"></script>
+    <script src="js/login-netlify.js?v=2.0"></script>
 </body>
 </html>
