Fix: Remover imagem externa via.placeholder.com
- Substituir img por avatar CSS com ícone Font Awesome
- Resolver erro ERR_TUNNEL_CONNECTION_FAILED
- Avatar com gradiente verde do tema Sala Livre
- Sem dependências externas para imagens

--- a/netlify/dashboard.html
+++ b/netlify/dashboard.html
@@ -108,7 +108,9 @@
                     </button>
                     <div class="user-menu">
                         <button class="user-menu-toggle" id="userMenuToggle">
-                            <img src="https://via.placeholder.com/40" alt="User" class="user-avatar-small">
+                            <div class="user-avatar-small">
+                                <i class="fas fa-user"></i>
+                            </div>
                             <i class="fas fa-chevron-down"></i>
                         </button>
                         <div class="user-menu-dropdown" id="userMenuDropdown">
