🔧 Corrige navegação do calendário
- Implementa navegação funcional entre meses (prev/next)
- Adiciona função updateCalendarTitle() para título dinâmico
- Conecta botões de navegação aos métodos FullCalendar
- Adiciona callback datesSet para sincronização automática
- Corrige mês inicial para Agosto 2025 (atual)
- Remove duplicação de código no initializeCalendar

Calendário agora navega corretamente entre meses! 📅

--- a/netlify/dashboard.html
+++ b/netlify/dashboard.html
@@ -256,7 +256,7 @@
                         <button class="btn-secondary" id="prevMonth">
                             <i class="fas fa-chevron-left"></i>
                         </button>
-                        <h3 id="currentMonth">Janeiro 2025</h3>
+                        <h3 id="currentMonth">Agosto 2025</h3>
                         <button class="btn-secondary" id="nextMonth">
                             <i class="fas fa-chevron-right"></i>
                         </button>
