--- a/netlify/dashboard.html
+++ b/netlify/dashboard.html
@@ -705,10 +705,13 @@
     </div>
 
     <!-- Scripts -->
+    <script src="js/api-client.js"></script>
     <script src="js/notifications.js"></script>
     <script src="js/theme-manager.js"></script>
     <script src="js/export-manager.js"></script>
     <script src="js/global-search.js"></script>
+    <script src="js/user-management-api.js"></script>
     <script src="js/dashboard.js"></script>
+    <script src="js/test-sistema.js"></script>
 </body>
 </html>
