🔄 Implementar sincronização automática em tempo real - reuniões sincronizam entre todos os usuários automaticamente

--- a/netlify/dashboard.html
+++ b/netlify/dashboard.html
@@ -711,6 +711,7 @@
     <script src="js/export-manager.js"></script>
     <script src="js/global-search.js"></script>
     <script src="js/user-management-api.js"></script>
+    <script src="js/auto-sync.js"></script>
     <script src="js/dashboard.js"></script>
     <script src="js/test-sistema.js"></script>
 </body>
